--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,46 @@
+alabaster==0.7.12
+aniso8601==7.0.0
 ariadne==0.13.0
+Babel==2.9.1
+certifi==2021.10.8
+charset-normalizer==2.0.7
 click==8.0.3
+docutils==0.17.1
 Flask==2.0.2
+Flask-GraphQL==2.0.1
 Flask-SQLAlchemy==2.5.1
-graphql-core==3.1.6
+graphene==2.1.9
+graphene-sqlalchemy==2.3.0
+graphql-core==2.3.2
+graphql-relay==2.0.1
+graphql-server-core==1.2.0
 greenlet==1.1.2
+idna==3.3
+imagesize==1.3.0
 importlib-metadata==4.8.2
 itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
+packaging==21.3
+promise==2.3
+Pygments==2.10.0
+pyparsing==3.0.6
+pytz==2021.3
+requests==2.26.0
+Rx==1.6.1
+singledispatch==3.7.0
+six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==4.3.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 SQLAlchemy==1.4.27
 starlette==0.14.2
 typing-extensions==4.0.0
+urllib3==1.26.7
 Werkzeug==2.0.2
 zipp==3.6.0
