--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alabaster==0.7.12
+alembic==1.7.5
 aniso8601==7.0.0
 ariadne==0.13.0
 Babel==2.9.1
@@ -7,7 +8,10 @@ charset-normalizer==2.0.7
 click==8.0.3
 docutils==0.17.1
 Flask==2.0.2
+Flask-Admin==1.5.8
 Flask-GraphQL==2.0.1
+Flask-Migrate==3.1.0
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
 graphene==2.1.9
 graphene-sqlalchemy==2.3.0
@@ -18,8 +22,10 @@ greenlet==1.1.2
 idna==3.3
 imagesize==1.3.0
 importlib-metadata==4.8.2
+importlib-resources==5.4.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
+Mako==1.1.6
 MarkupSafe==2.0.1
 packaging==21.3
 promise==2.3
@@ -40,7 +46,9 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 SQLAlchemy==1.4.27
 starlette==0.14.2
+thefuzz==0.19.0
 typing-extensions==4.0.0
 urllib3==1.26.7
 Werkzeug==2.0.2
+WTForms==3.0.0
 zipp==3.6.0
