--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,15 @@ click==8.0.3
 docutils==0.17.1
 Flask==2.0.2
 Flask-Admin==1.5.8
+Flask-GraphQL==2.0.1
 Flask-Migrate==3.1.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.5.1
+graphene==2.1.9
+graphene-sqlalchemy==2.3.0
+graphql-core==2.3.2
+graphql-relay==2.0.1
+graphql-server-core==1.2.0
 greenlet==1.1.2
 idna==3.3
 imagesize==1.3.0
@@ -22,6 +28,7 @@ Mako==1.1.6
 MarkupSafe==2.0.1
 packaging==21.3
 promise==2.3
+psycopg2-binary==2.9.2
 Pygments==2.10.0
 pyparsing==3.0.6
 python-Levenshtein==0.12.2
