--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.7
 click==8.0.3
 docutils==0.17.1
+elasticsearch==7.15.2
 Flask==2.0.2
 Flask-Admin==1.5.8
 Flask-GraphQL==2.0.1
@@ -28,6 +29,7 @@ Mako==1.1.6
 MarkupSafe==2.0.1
 packaging==21.3
 promise==2.3
+psycopg2==2.9.2
 psycopg2-binary==2.9.2
 Pygments==2.10.0
 pyparsing==3.0.6
@@ -35,6 +37,7 @@ python-Levenshtein==0.12.2
 pytz==2021.3
 requests==2.26.0
 Rx==1.6.1
+sentry-sdk==1.5.0
 singledispatch==3.7.0
 six==1.16.0
 snowballstemmer==2.2.0
@@ -47,6 +50,7 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 SQLAlchemy==1.4.27
 starlette==0.14.2
+structlog==21.4.0
 thefuzz==0.19.0
 typing_extensions==4.0.0
 urllib3==1.26.7
